--- a/Pruebas_pintureria_01/templates/compra_venta/orden_venta.html
+++ b/Pruebas_pintureria_01/templates/compra_venta/orden_venta.html
@@ -10,8 +10,8 @@
             <form method="post" action="/procesar_venta" onsubmit="return confirm('¿Estás seguro de procesar la compra?');">
                 <!-- Campo para seleccionar el cliente / proveedor -->
                 <div class="form-group">
-                    <label for="nombre_cliente">Selecciona un cliente:</label>
-                    <select class="form-control" id="nombre_cliente" name="nombre_cliente">
+                    <label for="id_cliente">Selecciona un cliente:</label>
+                    <select class="form-control" id="id_cliente" name="id_cliente">
                         {% for cliente in cliente_data %}
                             <option value="{{ cliente[0] }}">{{ cliente[1] }}</option>
                         {% endfor %}
