Arreglos en el pedido y la info de cliente/proveedor
Los pedidos funcionaban igual que las ventas, no tenia sentido, cuando compras algo no lo compras al precio que lo vendes, por lo tanto modifique el formato para que permita ponerle precio por producto y actualizar la lista del pedido, luego que el usuario modifique los precios de venta a gusto.

En cuanto a la info de cliente/proveedor, no estaba sumando bien los totales, ya que tenia en cuenta los numeros negativos de deudas a la hora de la suma del total.

--- a/Pruebas_pintureria_01/templates/clientes/info_cliente.html
+++ b/Pruebas_pintureria_01/templates/clientes/info_cliente.html
@@ -49,13 +49,13 @@
                 <div style="display: grid; grid-template-columns: repeat(2,1fr);">
                     <p style="border: none; margin: 0;">Diferencia:</p>
                     <div style="display: grid; grid-template-columns: repeat(3,1fr);">
-                        {% if diferencia_cliente is not none %}
-                            {% if diferencia_cliente < 0 %}
-                                <p style="margin: 0; text-align: center; grid-column: 3; border-top: 1px solid #000000; color: red; margin: 0;">${{ diferencia_cliente }}</p>
-                            {% elif diferencia_cliente == 0 %}
-                                <p style="margin: 0; text-align: center; grid-column: 3; border-top: 1px solid #000000; margin: 0;">${{ diferencia_cliente }}</p>
+                        {% if pago is not none and total is not none %}
+                            {% if pago - total < 0 %}
+                                <p style="margin: 0; text-align: center; grid-column: 3; border-top: 1px solid #000000; color: red; margin: 0;">${{ pago - total  }}</p>
+                            {% elif pago - total == 0 %}
+                                <p style="margin: 0; text-align: center; grid-column: 3; border-top: 1px solid #000000; margin: 0;">${{ pago - total }}</p>
                             {% else %}
-                                <p style="margin: 0; text-align: center; grid-column: 3; border-top: 1px solid #000000; color: green; margin: 0;">${{ diferencia_cliente }}</p>
+                                <p style="margin: 0; text-align: center; grid-column: 3; border-top: 1px solid #000000; color: green; margin: 0;">${{ pago - total  }}</p>
                             {% endif %}
                         {% endif %}
                     </div>
