cambios layout (offline)

--- a/Sistema/templates/layout.html
+++ b/Sistema/templates/layout.html
@@ -15,14 +15,14 @@
     
         <header>
             <div class="icon__menu">
-                <i class="fas fa-bars" id="btn_open"></i>
+                <i class="icono" id="btn_open"><img src="../static/images/ico/bars-solid.svg" alt="home" style="width: 20px;"></i>
             </div>
         </header>
     
         <div class="menu__side" id="menu_side">
     
             <div class="name__page">
-                <i class="fas fa-home" style="color: transparent;"></i>
+                <i class="icono" style="opacity: 0;"><img src="../static/images/ico/bars-solid.svg" alt="home" style="width: 20px;"></i>
                 <h5>Pintureria Pehuajo</h5>
                 <!-- <img src="../static/images/logo_PP.svg" alt="Logo_PP" style="height: 50px;"> -->
             </div>
