--- a/Sistema/templates/productos/productos.html
+++ b/Sistema/templates/productos/productos.html
@@ -113,21 +113,19 @@
                             </td>
                             <td style="text-align: center;">${{ producto[5] }}</td>
                             <!-- Acciones -->
-                            <td style="display: flex; justify-content: space-between;">
-                                <div>
-                                    <!-- Boton para editar -->
-                                    <a class="btn btn-primary btn-sm" href="/edit/{{ producto[0] }}" title="Editar"><img src="../../static/images/ico/pen-solid.svg" alt="Editar" style="height: 20px;"></a>
-                                    <!-- Boton para eliminar con confirmación -->
-                                    <a class="btn btn-danger btn-sm" href="#" onclick="confirmDelete('{{ producto[0] }}')" title="Eliminar"><img src="../../static/images/ico/trash-solid.svg" alt="Eliminar" style="height: 20px;"></a>
-                                    <!-- Boton para agregar al pedido -->
-                                    <a class="btn btn-success btn-sm" href="/add_to_cart_ped/{{ producto[0] }}" title="Agregar al Pedido"><img src="../../static/images/ico/plus-solid.svg" alt="Agregar al Pedido" style="height: 20px;"></a>
-                                </div>
-                                <div>
+                            <td style="display: table-cell; text-align: center; vertical-align: middle; width: 18%;"> <!-- style="display: flex; justify-content: space-between;" -->
+                                <!-- Boton para editar -->
+                                <a class="btn btn-primary btn-sm" href="/edit/{{ producto[0] }}" title="Editar"><img src="../../static/images/ico/pen-solid.svg" alt="Editar" style="height: 20px;"></a>
+                                <!-- Boton para eliminar con confirmación -->
+                                <a class="btn btn-danger btn-sm" href="#" onclick="confirmDelete('{{ producto[0] }}')" title="Eliminar"><img src="../../static/images/ico/trash-solid.svg" alt="Eliminar" style="height: 20px;"></a>
+                                <!-- Boton para agregar al pedido -->
+                                <a class="btn btn-success btn-sm" href="/add_to_cart_ped/{{ producto[0] }}" title="Agregar al Pedido"><img src="../../static/images/ico/plus-solid.svg" alt="Agregar al Pedido" style="height: 20px;"></a>
+                                <!-- <div> -->
                                     <!-- Verificar cantidad mínima con stock actual --> 
                                     <!-- {% if producto[4] <= producto[7] %}                    temporalmente desactivado
                                         <span class="badge badge-warning">¡Stock bajo!</span>
                                     {% endif %} -->
-                                </div>
+                                <!-- </div> -->
                             </td>
                         </tr>
                     {% endif %}
